chore: 타입 변경